<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/main_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/name"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textStyle="bold"
           />
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/main_bg"
            android:padding="13dp"
            android:background="@drawable/edit_text_bg"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"

            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/main_bg"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:background="@drawable/edit_text_bg"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/phone"

            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"

            />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:cursorVisible="true"
            android:textColor="@color/main_bg"
            android:padding="13dp"
            android:background="@drawable/edit_text_bg"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"

            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="13dp"
            android:inputType="textPassword"
            android:textColor="@color/main_bg"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            android:background="@drawable/edit_text_bg"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"

            />
        <EditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="13dp"
            android:inputType="textPassword"
            android:textColor="@color/main_bg"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            android:background="@drawable/edit_text_bg"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="20dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textStyle="bold"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/already_have_account"/>
            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/sign_in"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/resend_sms"/>
            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/resend"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/verify"/>
            <TextView
                android:id="@+id/verify_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/verify_phone"/>
        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>